--- a/package.json
+++ b/package.json
@@ -1,38 +1,83 @@
 {
-  "name": "angular-reactiveform-login",
+  "name": "e-commerce",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "init": "git submodule update --init --recursive && yarn install",
+    "dev": "nx run-many -p e-commerce-front,e-commerce-back -t serve",
+    "dev:front": "nx run e-commerce-front:serve",
+    "dev:back": "nx run e-commerce-back:serve",
+    "start": "nx run-many -p e-commerce-front,e-commerce-back -t start",
+    "start:front": "nx run e-commerce-front:start",
+    "start:back": "nx run e-commerce-back:start",
+    "start:back:dev": "nx run e-commerce-back:start:dev",
+    "prod:server": "cd apps/e-commerce-back && npm start",
+    "build": "nx run-many -p e-commerce-front,e-commerce-back -t build",
+    "build:front": "nx run e-commerce-front:build",
+    "build:back": "nx run e-commerce-back:build",
+    "build:shared": "nx run @e-commerce/shared:build",
+    "build:libs": "yarn build:shared",
+    "lint": "nx run-many -p e-commerce-front,e-commerce-back -t lint",
+    "lint:front": "nx run e-commerce-front:lint",
+    "lint:back": "nx run e-commerce-back:lint",
+    "lint:shared": "nx run @e-commerce/shared:lint",
+    "test": "nx run-many -p e-commerce-front,e-commerce-back -t test",
+    "test:front": "nx run e-commerce-front:test",
+    "test:back": "nx run e-commerce-back:test"
   },
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/animations": "~16.0.0",
+    "@angular/common": "~16.0.0",
+    "@angular/compiler": "~16.0.0",
+    "@angular/core": "~16.0.0",
+    "@angular/forms": "~16.0.0",
+    "@angular/platform-browser": "~16.0.0",
+    "@angular/platform-browser-dynamic": "~16.0.0",
+    "@angular/router": "~16.0.0",
+    "@nx/angular": "16.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.4",
-    "@angular/cli": "~16.0.4",
-    "@angular/compiler-cli": "^16.0.0",
-    "@types/jasmine": "~4.3.0",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "@angular-devkit/build-angular": "~16.0.0",
+    "@angular-devkit/core": "~16.0.0",
+    "@angular-devkit/schematics": "~16.0.0",
+    "@angular-eslint/eslint-plugin": "~16.0.0",
+    "@angular-eslint/eslint-plugin-template": "~16.0.0",
+    "@angular-eslint/template-parser": "~16.0.0",
+    "@angular/cli": "~16.0.0",
+    "@angular/compiler-cli": "~16.0.0",
+    "@angular/language-service": "~16.0.0",
+    "@nx/cypress": "16.3.2",
+    "@nx/eslint-plugin": "16.3.2",
+    "@nx/jest": "16.3.2",
+    "@nx/js": "16.3.2",
+    "@nx/linter": "16.3.2",
+    "@nx/web": "16.3.2",
+    "@nx/workspace": "16.3.2",
+    "@schematics/angular": "~16.0.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "cypress": "^12.11.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-preset-angular": "~13.1.0",
+    "nx": "16.3.2",
+    "nx-cloud": "latest",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.0.2"
   }
 }
