--- a/apps/e-commerce-front/package.json
+++ b/apps/e-commerce-front/package.json
@@ -15,10 +15,14 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@apollo/client": "^3.7.16",
+    "apollo-angular": "^5.0.0",
+    "firebase": "^9.22.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
