--- a/apps/e-commerce-back/package.json
+++ b/apps/e-commerce-back/package.json
@@ -15,8 +15,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@e-commerce/shared": "*",
     "@apollo/server": "^4.7.3",
+    "@e-commerce/shared": "*",
     "apollo-server": "^3.12.0",
     "firebase": "^9.22.2",
     "firebase-admin": "^11.9.0",
@@ -25,10 +25,10 @@
     "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "4.0.1",
+    "@graphql-codegen/cli": "^4.0.1",
     "@graphql-codegen/introspection": "4.0.0",
-    "@graphql-codegen/typescript": "4.0.0",
-    "@graphql-codegen/typescript-resolvers": "4.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@types/node": "^20.2.5",
     "typescript": "^5.1.3"
   }
