--- a/apps/e-commerce-back/tsconfig.json
+++ b/apps/e-commerce-back/tsconfig.json
@@ -8,6 +8,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "noImplicitReturns": true,
     "types": ["node"]
   }
 }
