--- a/apps/e-commerce-api/package.json
+++ b/apps/e-commerce-api/package.json
@@ -9,8 +9,8 @@
     "build:watch": "tsc --watch",
     "generate": "graphql-codegen --config codegen.yml",
     "compile": "npm run generate && npm run build",
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
+    "serve": "npm run compile && firebase emulators:start --only functions",
+    "shell": "npm run compile && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
