feat: Create mutation for creation new user using firebase admin

--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "license": "MIT",
   "scripts": {
     "init": "git submodule update --init --recursive && yarn install",
-    "dev": "nx run-many -p e-commerce-front,e-commerce-back -t serve",
+    "dev": "nx run-many -p e-commerce-front,e-commerce-api -t serve",
     "dev:front": "nx run e-commerce-front:serve",
-    "dev:back": "nx run e-commerce-back:serve",
-    "start": "nx run-many -p e-commerce-front,e-commerce-back -t start",
+    "dev:back": "nx run e-commerce-api:serve",
+    "start": "nx run-many -p e-commerce-front,e-commerce-api -t start",
     "start:front": "nx run e-commerce-front:start",
-    "start:back": "nx run e-commerce-back:start",
-    "start:back:dev": "nx run e-commerce-back:start:dev",
-    "prod:server": "cd apps/e-commerce-back && npm start",
-    "build": "nx run-many -p e-commerce-front,e-commerce-back -t build",
+    "start:back": "nx run e-commerce-api:start",
+    "start:back:dev": "nx run e-commerce-api:start:dev",
+    "prod:server": "cd apps/e-commerce-api && npm start",
+    "build": "nx run-many -p e-commerce-front,e-commerce-api -t build",
     "build:front": "nx run e-commerce-front:build",
-    "build:back": "nx run e-commerce-back:build",
+    "build:back": "nx run e-commerce-api:build",
     "build:shared": "nx run @e-commerce/shared:build",
     "build:libs": "yarn build:shared",
-    "lint": "nx run-many -p e-commerce-front,e-commerce-back -t lint",
+    "lint": "nx run-many -p e-commerce-front,e-commerce-api -t lint",
     "lint:front": "nx run e-commerce-front:lint",
-    "lint:back": "nx run e-commerce-back:lint",
+    "lint:back": "nx run e-commerce-api:lint",
     "lint:shared": "nx run @e-commerce/shared:lint",
-    "test": "nx run-many -p e-commerce-front,e-commerce-back -t test",
+    "test": "nx run-many -p e-commerce-front,e-commerce-api -t test",
     "test:front": "nx run e-commerce-front:test",
-    "test:back": "nx run e-commerce-back:test"
+    "test:back": "nx run e-commerce-api:test"
   },
   "private": true,
   "workspaces": [
